Bug 247014 - Unreviewed GCC warning fixes
Summary: Unreviewed GCC warning fixes
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Michael Catanzaro
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-10-25 11:32 PDT by Michael Catanzaro
Modified: 2022-10-25 11:51 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Catanzaro 2022-10-25 11:32:28 PDT
Now that warnings are build failures, we need to stay on top of them. This fixes a few recent ones that just snuck in.
Comment 1 Michael Catanzaro 2022-10-25 11:35:50 PDT
Pull request: https://github.com/WebKit/WebKit/pull/5766
Comment 2 EWS 2022-10-25 11:50:42 PDT
Committed 255972@main (9ff8ffb8786e): <https://commits.webkit.org/255972@main>

Reviewed commits have been landed. Closing PR #5766 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2022-10-25 11:51:20 PDT
<rdar://problem/101554383>