Unreviewed GCC warning fixes https://bugs.webkit.org/show_bug.cgi?id=247014

* Source/JavaScriptCore/jit/SIMDInfo.h:
(JSC::elementCount):
(JSC::narrowedLane):
(JSC::promotedLane):
(JSC::elementByteSize):
* Source/JavaScriptCore/wasm/WasmTypeDefinition.h:
(JSC::Wasm::simdScalarType):
* Source/WebCore/accessibility/AccessibilityProgressIndicator.cpp:
(WebCore::AccessibilityProgressIndicator::minValueForRange const):
* Tools/wpe/backends/fdo/WindowViewBackend.cpp:

Canonical link: https://commits.webkit.org/255972@main